ci(docs): automatically set new tags as latest and default version

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,10 +31,12 @@ jobs:
         git config user.email ci-bot@example.com
 
         if [[ "$GITHUB_REF" == refs/tags/* ]]; then
-          # Tag push: deploy the tag version
+          # Tag push: deploy the tag version with 'latest' alias and set as default
           TAG_VERSION=${GITHUB_REF#refs/tags/}
           echo "Deploying docs for tag $TAG_VERSION"
-          mike deploy --push $TAG_VERSION
+          mike deploy --push --update-aliases $TAG_VERSION latest
+          echo "Setting $TAG_VERSION as default version"
+          mike set-default --push $TAG_VERSION
         else
           # Main branch push: deploy to 'main'
           echo "Deploying docs for main branch"
