Add new image and CMSSW version to CI workflow

--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -34,6 +34,10 @@ jobs:
           - LCG_RELEASE: "LCG_102"
             LCG_ARCH: "x86_64-ubuntu2204-gcc11-opt"
             ROOT: "6.26.04"
+          - IMAGE: "cmscloud/al9-cms"
+            CMSSW_VERSION: "CMSSW_16_0_0"
+            SCRAM_ARCH: "el9_amd64_gcc12"
+            ROOT: "6.36.07"            
           - LCG_RELEASE: "LCG_106"
             LCG_ARCH: "x86_64-ubuntu2204-gcc11-opt"
             ROOT: "6.32.02"
