[test] Move RooParametricHist test to CTest

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -251,15 +251,13 @@ ADD_COMBINE_TEST(template_analysis_large_integrals_cmshistsum
 )
 
 # RooParametricHist
-# Unfortunately, the result of this test is not deterministic, so we can't enable it yet.
-# TODO: understand why this is, enable the test here, and remove corresponding test from cvmfs-ci.yml
-# ADD_COMBINE_TEST(parametric_hist
-#   COPY_TO_BUILDDIR ${REPO}/data/ci/shapes_RooParametricHist.root
-#   T2W_COMMAND
-#   text2workspace.py -P HiggsAnalysis.CombinedLimit.PhysicsModel:multiSignalModel  --PO verbose --PO map=.*/*hcc*:r[1,-500,500] --PO map=.*/zcc:z[1,-5,5] ${REPO}/data/ci/datacard_RooParametricHist.txt -o ws_RooParametricHist.root
-#   COMBINE_COMMANDS
-#     "combine -M MultiDimFit ws_RooParametricHist.root --algo singles"
-# )
+ADD_COMBINE_TEST(parametric_hist
+  COPY_TO_BUILDDIR ${REPO}/data/ci/shapes_RooParametricHist.root
+  T2W_COMMAND
+  text2workspace.py -P HiggsAnalysis.CombinedLimit.PhysicsModel:multiSignalModel  --PO verbose --PO map=.*/*hcc*:r[1,-500,500] --PO map=.*/zcc:z[1,-5,5] ${REPO}/data/ci/datacard_RooParametricHist.txt -o ws_RooParametricHist.root
+  COMBINE_COMMANDS
+    "combine -M MultiDimFit ws_RooParametricHist.root --algo singles"
+)
 
 # Template analysis CMSHistFunc with channel masks
 ADD_COMBINE_TEST(cmshistsum_channel_masks
