--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
+      - '**CMakeLists.txt'
       - '**.cmake'
       - '**.h'
       - '**.cc'
